--- a/core/src/test/resources/simplelogger.properties
+++ b/core/src/test/resources/simplelogger.properties
@@ -23,6 +23,6 @@ org.slf4j.simpleLogger.showDateTime=true
 
 org.slf4j.simpleLogger.defaultLogLevel=info
 
-org.slf4j.simpleLogger.log.org.jboss.remotebuilder=debug
+org.slf4j.simpleLogger.log.org.jboss.remoterunner=debug
 org.slf4j.simpleLogger.log.org.jboss.pnc.buildagent.termserver=debug
 
