--- a/core/src/main/resources/simplelogger.properties
+++ b/core/src/main/resources/simplelogger.properties
@@ -23,5 +23,5 @@ org.slf4j.simpleLogger.showDateTime=true
 
 org.slf4j.simpleLogger.defaultLogLevel=info
 
-org.slf4j.simpleLogger.log.org.jboss.remotebuilder=debug
+org.slf4j.simpleLogger.log.org.jboss.remoterunner=debug
 
