--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>18</version>
   </parent>
 
-  <groupId>org.jboss.remotebuilder</groupId>
+  <groupId>org.jboss.remoterunner</groupId>
   <artifactId>parent</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
